--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     background-image:linear-gradient(rgba(0,0,0,0),rgba(0,0,1,1)) ,url(images/donation13.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    width: 100%;
+    width: 100%;                        
     height: 700px;
     padding-top: 1%;
     margin-bottom: 120px;
@@ -16,7 +16,6 @@ body{
     color: white;
     text-align: center;
 }
-
 .button{
     color: white;
     text-decoration: none;
@@ -35,16 +34,23 @@ h1{
 .donate-today{
     text-align: center;
 }
+.donate-information{
+    margin-bottom: 120px;
+}
 .donate-information p{
     color: rgb(81, 82, 82);
     text-align: center;
+}
+.donate-plan{
+    margin-bottom: 120px;
 }
 .flex{
     display: flex;
     justify-content: space-between;
 }
 .container1{
-    margin: 30px 0;
+    margin: auto;
+    width: 1000px;
 }
 .container-btn{
     padding: 55px 45px;
@@ -123,6 +129,7 @@ hr{
 .updates-section{
     margin-top: 50px;
     text-align: center;
+    margin-bottom: 120px;
 }
 .updates-section p{
     color: rgb(81, 82, 82);
@@ -154,10 +161,78 @@ hr{
     margin: auto;
 
 }
-
-
-
-
+.payment-content{
+    text-align: center;
+    color: white;
+}
+.payment-section{
+    background-image: linear-gradient(to top,rgba(0,0,0,0),rgba(0, 0, 1, 1)) ,url(images/donation8.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 700px;
+    width: 100%;  
+    margin-bottom: 120px;
+}
+.payment-content h2{
+    font-size: 35px;
+    padding-top: 100px;
+}
+.bkash-box h2{
+    text-align: center;
+    margin-left: 5%;
+}
+.bkash-box{
+    background-color: #EDF5F6;
+    padding: 60px 20px;
+    margin: 10px;
+    border-radius: 10px;
+    box-shadow: 10px 10px 20px rgb(88, 86, 86);
+}
+.nogod-box{
+    background-color: #FFEEEE;
+    padding: 60px 20px;
+    margin: 10px;
+    border-radius: 10px;
+    box-shadow: 10px 10px 20px rgb(88, 86, 86);
+}
+.dbbl-box{
+    background-color: #cfe8f8;
+    padding: 60px 20px;
+    margin: 10px;
+    border-radius: 10px;
+    box-shadow: 10px 10px 20px rgb(88, 86, 86);
+}
+.dbbl-box img{
+    height: 200px;
+    width: 250px;
+    margin-left: 15px;
+}
+.nogod-box img{
+    width: 250px;
+    height: 200px;
+    margin-left: 20px;
+}
+.nogod-box h2{
+    text-align: center;
+    margin-left: 5%;
+}
+.dbbl-box h2{
+    text-align: center;
+    margin-left: 5%;
+}
+.click-button{
+    background-color: #ff5959;
+    border: 2px solid rgb(236, 97, 97);
+    height: 30px;
+    width: 100px;
+    text-decoration: none;
+    border-radius: 5px;
+    margin-left: 80px;
+}
+.click-button a{
+    text-decoration: none;
+    color: white;
+}
 footer{
     text-align: center;
     background-color: black;
